syntax = "proto2";

package MMPro.micromsg;

import "SKBuiltinString_t.proto";

message ModChatRoomTopic {
	required SKBuiltinString_t _ChatRoomName = 1;
	required SKBuiltinString_t _ChatRoomTopic = 2;
}
