syntax = "proto2";

package MMPro.micromsg;


message TranslateOrgMsg {
	required uint32 _ClientMsgID = 1;
	optional string _TextMsg = 2;
	optional string _ChatRoomID = 3;
	optional uint32 _Scene = 4;
}
